--- a/studio/templates/studio/community_showcase.html
+++ b/studio/templates/studio/community_showcase.html
@@ -146,11 +146,7 @@
             <div class="text-center py-12">
                 <i class="fas fa-images text-gray-500 text-4xl mb-4"></i>
                 <p class="text-gray-400 mb-4">No community content yet. Be the first to share!</p>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'games' %}" class="bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300">
-                        <i class="fas fa-upload mr-2"></i>Upload Content
-                    </a>
-                {% endif %}
+                <!-- User authentication removed -->
             </div>
             {% endif %}
         </div>
